feat: add security for input tut token
